# vela-bundler

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.release  README.md  build.rs  compose.yaml  deno.json  main.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.node.config.ts  vitest.workers.config.ts  vitest.workspace.ts  wrangler.dev.jsonc  wrangler.jsonc
.github/workflows/: ci.yml  release.yml
agent-rules/: AI-CODING-RULES.md
contracts/alto/: EntryPointSimulations07.json  PimlicoSimulations.json  README.md
deno/: config.ts  index.html  main.ts  server.ts
deploy/systemd/: vela-bundler-alert.service  vela-bundler.service
docs/: api-contract.md  docker.md  inband-gas-settlement.md  local-queue-dev.md  pool-queue-architecture.md
docs/project-takeover/: 01-system-overview.md  02-local-development.md  03-core-flows.md  04-production-readiness.md  05-deployment-runbook.md  06-operations-runbook.md  07-maintenance-guide.md  08-open-issues.md  README.md
evm_contracts/: foundry.toml
evm_contracts/script/: DeployVelaGasPaymaster.s.sol  DeployVelaGasSettlementSplitter.s.sol
evm_contracts/src/: VelaGasPaymaster.sol  VelaGasSettlementSplitter.sol
evm_contracts/test/: VelaGasSettlementSplitter.t.sol  VelaGasSettlementSplitterCreate2.t.sol
scripts/: build-html.ts  deploy.ts  e2e.ts  generate-bytecode.ts  run-spec-tests.sh  test-l2-fee.ts
shared/: tempo.ts
src/: app.rs  main.rs
tests/: account_test.ts  alarm_liveness_test.ts  alchemy_test.ts  api_contract_test.ts  body_cap_test.ts  bundler_pending_persistence_test.ts  bundler_service_test.ts  chain_registry_test.ts  coordinator_test.ts  cors_test.ts  degraded_error_test.ts  fee_model_test.ts  fixes_test.ts  float_topup_test.ts  gas_price_fallback_test.ts  gas_test.ts  handlers_test.ts  hardening_round4_test.ts  integration_test.ts  keys_test.ts  mempool_reputation_test.ts  mempool_test.ts  monitoring_test.ts  pool_lease_test.ts  process_test.ts  rate_limit_test.ts  receipt_format_test.ts  redirect_mode_test.ts  reliability_breaker_test.ts  reliability_errors_test.ts  reliability_retry_test.ts  reliability_rpc_fetch_test.ts  reputation_test.ts  rest_api_test.ts  rpc_errors_test.ts  rpc_failover_test.ts  rpc_resolution_test.ts  rpc_security_test.ts  simulate_bundle_skipcall_test.ts  simulation_test.ts  (+12 more)
worker/: bundler-do.ts  config.ts  debug-page.ts  index.ts  producer.ts  relayer-do.ts  types.ts
(+148 files in other folders)
